name:                jump
version:             0.1.0.0
synopsis:            Jump start your Haskell development
description:         Please see README.md
homepage:            http://github.com/commercialhaskell/jump#readme
license:             MIT
license-file:        LICENSE
author:              Commercial Haskell SIG (primary: Michael Snoyman)
maintainer:          michael@fpcomplete.com
category:            Data
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md
                     doc/*.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jump

                       Jump.Lens
                       Jump.Trans
                       Jump.Vector
  other-modules:       Start
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , exceptions
                     , fail
                     , filepath
                     , hashable
                     , mtl
                     , text
                     , transformers
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite jump-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jump
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite jump-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base
                     , jump
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/jump
